Fix vertical alignment for quick-input count

--- a/src/vs/base/parts/quickinput/browser/media/quickInput.css
+++ b/src/vs/base/parts/quickinput/browser/media/quickInput.css
@@ -95,6 +95,7 @@
 
 .quick-input-count {
 	align-self: center;
+	line-height: 11px;
 	position: absolute;
 	right: 4px;
 }
